Closed Bug 1667439 Opened 4 years ago Closed 4 years ago

`DOM_Fullscreen` is not a valid wakelock topic

Categories

(Core :: DOM: Core & HTML, defect)

defect

Tracking

()

RESOLVED FIXED
84 Branch
Tracking Status
firefox84 --- fixed

People

(Reporter: alwu, Assigned: alwu)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

We handle wakelock topic in nsAppShell in each different platform but we didn't handle DOM_Fullscreen, so this wakelock actually didn't take effect.

Someone needs to take a look if we still need this wakelock or not. Currently wakelock would only be correctly request for media playback.

Severity: -- → S3

It seems bug 805017 wanted to use wake lock when using Fullscreen API. But since:

  1. the spec does not require it
  2. Chrome does not neither on Android nor Windows
  3. Gecko also actually didn't

I think we can safely remove it.

There is a suggestion to spec and implement this: https://github.com/whatwg/fullscreen/issues/185

(In reply to Kagami :saschanaz from comment #1)

It seems bug 805017 wanted to use wake lock when using Fullscreen API. But since:

  1. the spec does not require it
  2. Chrome does not neither on Android nor Windows
  3. Gecko also actually didn't

I think we can safely remove it.

Thank you, I am going to remove this, which can help us to clean unnecessary code for our refactoring preparation. If in the future we still want to add a wakelock for fullscreen, feel free to file another bug and block our meta bug.

Assignee: nobody → alwu

Remove this invalid wakelock because our wakelock system doesn't handle this topic.

Pushed by alwu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/41ba0094d57c
remove invalid wakelock for 'DOM_Fullscreen'. r=saschanaz
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: