Bug 1667439 - remove invalid wakelock for 'DOM_Fullscreen'. r=saschanaz

Remove this invalid wakelock because our wakelock system doesn't handle this topic.

Differential Revision: https://phabricator.services.mozilla.com/D94394